test/data/semantic-errors/undeclared-variables.gs
Num y = 90
printes x